# robots-in-disguise

./: .gitignore  CodeOfConduct.md  Code_of_Conduct.md  PREVIOUS.md  README.md  pyproject.toml  w2v-REGinald.ipynb
REGinalds/: ngrams-REGinald.ipynb  w2v-REGinald.ipynb
REGinalds/gpt2-demo/: RAG-REGinald.ipynb  README.md  gpt2-inference-REGindald.ipynb  gpt2_finetune_REGindald.ipynb
sessions/01/: cbow_example.ipynb  cbow_example.py  wordnet_w2v.ipynb
sessions/01-word-embeddings/: cbow_example.ipynb
sessions/02-deep-learning/: pytorch_quickstart_tutorial.ipynb
sessions/03-seq2seq-part-i/: fixed_window_neural_language_model.ipynb  neural_language_modelling.ipynb  recurrent_neural_network_language_model.ipynb
sessions/03-seq2seq-part-i/GoT/: got1.txt  got2.txt  got3.txt  got4.txt  got5.txt
sessions/03-seq2seq-part-i/data/: S01E07.txt  S01E08.txt  S01E12.txt  S02E07.txt  S02E08.txt  S03E05.txt  S03E11.txt  S03E12.txt  S04E01.txt  S04E04.txt  S04E06.txt  S04E10.txt  S04E13.txt  S05E04.txt  S05E07.txt  S05E10.txt  S05E12.txt  S06E06.txt  S06E07.txt  S06E12.txt  S06E13.txt  S06E15.txt  S06E17.txt
sessions/03-seq2seq-part-i/sopranos_subtitles/: S01E01.txt  S01E02.txt  S01E03.txt  S01E04.txt  S01E05.txt  S01E06.txt  S01E09.txt  S01E10.txt  S01E11.txt  S01E13.txt  S02E01.txt  S02E02.txt  S02E03.txt  S02E04.txt  S02E05.txt  S02E06.txt  S02E09.txt  S02E10.txt  S02E11.txt  (+44 more)
sessions/05-attention/: attention.key
sessions/11-peft/: annakendrick.csv  billgates.csv  elonmusk.csv  eminem.csv  oprah.csv  peft.ipynb
sessions/21-retentive-networks/: RetentiveNetworks.pptx
(+8 files in other folders)
