[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["fedenanni <nanni.federico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.3.0"
sentence-splitter = "^1.4"
nltk = "^3.8.1"
keras = "^2.11.0"
numpy = "^1.24.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
transformers = "^4.27.4"
spacy = "^3.5.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
